force-app/main/default/objects/sma__MATerritoryNode__c/sma__MATerritoryNode__c.object-meta.xml
<CustomObject>
    <label>MapAnything Territory Node</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>