force-app/main/default/objects/sma__MATerritoryNode__c/fields/sma__Order__c.field-meta.xml
<CustomField>
    <fullName>sma__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>