force-app/main/default/objects/sma__MATerritoryNode__c/fields/sma__Selected__c.field-meta.xml
<CustomField>
    <fullName>sma__Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for node selection</description>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>